--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KotlinListaContatosDIO</string>
+    <string name ="open_drawer">Abrir</string>
+    <string name ="close_drawer">Fechar</string>
+
 </resources>
